updates for v1.1.0